--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -45,6 +45,13 @@ You should see two messages from our module. One message is containing the value
 
 # 2
 ## a
+To run the attack, first of all we need to compile the vulnerable program:
+
+```
+cd rop
+make
+```
+
 You can disable ASLR via `make disable-aslr`.
 
 ## b
