Explain how the exploit script works.

--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -58,6 +58,23 @@ The exploit script `exploit.sh` tries to automatically find the path of Libc, bu
 
 To enable debug output, run the script like this `DEBUG=1 ./exploit.sh …`.
 
+The exploit script gathers the name buffer's address, the base address of Libc, the offsets of the `system` and `exit` functions, and the offset of the gadget. Then it calculates the actual addresses of the gadget, and both functions using the Libc base address. Next it assembles the payload from this data as follows:
+
+1. string "/bin/sh" (encoded with `xxd -p`)
+2. padding consisting of NULL bytes
+3. address of the gadget
+4. address of "/bin/sh" = address of the name buffer
+5. address of the `system` function
+6. address of the `exit` function
+
+All addresses are encoded in little endian.
+
+After it generated the payload, our script starts the vulnerable program with the payload as input. If everything goes well, the string "/bin/sh" ends up the the beginning of the buffer, then the padding of NULL bytes skips the rest of the buffer, and the frame pointer after the buffer. The address of the gadget is therefore written over the return address.
+
+When the program tries to return, it returns to the gadget, because we overwrote the original return address. The gadget pops the next value on the stack into register `RDI`, then returns. The system function is called because it is the next thing on the stack. It looks into `RDI` for its first argument, which we made sure is "/bin/sh", so it executes `/bin/sh`, so we have shell access.
+
+The address of the `exit` function was added, so that when returning from the shell we do not get a segmentation fault, but jump into the exit function, which exits gracefully.
+
 ## b
 ## c
 ## d
