Clarify usage of the exploit script.

--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -80,6 +80,8 @@ When the program tries to return, it returns to the gadget, because we overwrote
 
 The address of the `exit` function was added, so that when returning from the shell we do not get a segmentation fault, but jump into the exit function, which exits gracefully.
 
+After running the exploit with `[DEBUG=1] [libc_path=…] ./exploit vulnerable`, you need to press enter twice, then you have a shell. You can verify this by trying to execute `ls`, or something similar.
+
 ## b
 ## c
 ## d
